welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:5: error: not found: value estSUrBiscuit
while (estSUrBiscuit()==true){
       ^DwarfCode:12: error: not found: value avnce
avnce()
^