welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estSurBiscuit()==false){
	avance()
}
while (estSUrBiscuit()==true){
	prendBiscuit()
	recule()
}
while (estSurBiscuit()==false){
	recule()
}
avnce()
poseBiscuit()